# sample-sap-genai-hub-bedrock

./: .env.example  .gitignore  00-load-sap-ai-core-credentials.ipynb  01-consume-bedrock-models-via-genaihub.ipynb  02-tool-calling-via-amazon-nova-genaihub.ipynb  03-agentic-workflows-with-langchain-langgraph-via-genaihub.ipynb  04-strands-agent-with-sap-genai-hub.ipynb  05-strands-agent-deep-research.ipynb  06-strands-sap-supply-chain-agent-odatadynamic.ipynb  07-deploy-warehouse-agent-to-agentcore.ipynb  pyproject.toml
.ipynb_checkpoints/: 03-agentic-workflows-with-langchain-langgraph-via-genaihub-checkpoint.ipynb  05-strands-agent-deep-research-checkpoint.ipynb  06-strands-agents-mcp-financial-intelligence-checkpoint.ipynb
assets/knowledgebase/: CE_FREIGHTBOOKING_0001.yaml  CE_WHSEPHYSICALSTOCKPRODUCTS_0001.yaml  sap-s4-CE_PHYSICALINVENTORYDOCUMENT_0001-v1.yaml
util/: mcp_session_manager.py  odata_tool.py  strands_tracer.py
