[project]
name = "strands-sap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "aioboto3>=13.2.0",
    "boto3>=1.37.0",
    "ddgs>=8.0.4",
    "sap-ai-sdk-gen[all]>=5.5.0",
    "ipykernel>=6.29.5",
    "langchain==0.3.25",
    "langgraph==0.3.25",
    "strands-agents==1.5.0",
    "strands-agents-builder==0.1.8",
    "strands-agents-tools==0.2.0",
    "streamlit>=1.46.1",
    "uvicorn>=0.34.3",
    "tavily-python",
    "bedrock-agentcore-starter-toolkit>=0.1.9",
]
